include_directories(${st_tree_SOURCE_DIR}/include)

add_executable(x01_hello_world x01_hello_world.cpp)
add_executable(x02_ordered_children x02_ordered_children.cpp)
add_executable(x03_keyed_children x03_keyed_children.cpp)
add_executable(x04_sort_children x04_sort_children.cpp)
add_executable(x05_node_methods x05_node_methods.cpp)
add_executable(x06_graft x06_graft.cpp)
add_executable(x07_iterators, x07_iterators.cpp)
